doc: update 1.3 Compilation execution